[gd_scene load_steps=6 format=2]

[ext_resource path="res://ui/menus/BeginTimer.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/maga-sans.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/music/countdownBeep.wav" type="AudioStream" id=3]
[ext_resource path="res://assets/music/go_sound.wav" type="AudioStream" id=4]

[sub_resource type="DynamicFont" id=1]
size = 48
font_data = ExtResource( 2 )

[node name="BeginTimer" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Background" type="ColorRect" parent="."]
modulate = Color( 1, 1, 1, 0.784314 )
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0313726, 0.0235294, 0.0235294, 0.760784 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 137.0
margin_top = 141.0
margin_right = 503.0
margin_bottom = 219.0
custom_constants/separation = 2

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 366.0
margin_bottom = 78.0
custom_fonts/font = SubResource( 1 )
text = "Loading..."
align = 1

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="countdownBeep" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )

[node name="go_sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
